# AlgorithmsProgramming

./: ArithmeticMeanKahan.cpp  ArithmeticMeanKahan.h  CMakeLists.txt  Eratosthenes.cpp  Eratosthenes.h  Matrix.cpp  Matrix.h  QuadraticEquation.cpp  QuadraticEquation.h  README.md  main.cpp
